--- a/app/dashboard/parent/children/new/template.hbs
+++ b/app/dashboard/parent/children/new/template.hbs
@@ -1,8 +1,10 @@
 <h1>Add Children</h1>
 
-{{#simple-form startingValues=model onsubmit=(action saveEdit model) as |formValues|}}
+{{#simple-form onsubmit=(action saveChild) as |formValues|}}
   {{input placeholder="userName" value=formValues.userName}}
   {{input placeholder="password" value=formValues.password}}
+  {{input placeholder="avatar" value=formValues.avatar}}
+  {{input placeholder="pointTotal" value=formValues.pointTotal}}
   <p>
     {{#link-to "dashboard.parent.children"}}Cancel{{/link-to}}
     <button>SAVE</button>
