--- a/app/dashboard/parent/template.hbs
+++ b/app/dashboard/parent/template.hbs
@@ -13,7 +13,7 @@
       <button class="menu-button">Home</button>
     {{/link-to}}
 
-    {{#link-to "dashboard.parent.children"}}
+    {{#link-to "dashboard.parent.children.new"}}
       <button class="menu-button">Children</button>
     {{/link-to}}
 
