--- a/app/dashboard/parent/children/new/template.hbs
+++ b/app/dashboard/parent/children/new/template.hbs
@@ -6,7 +6,7 @@
   {{input placeholder="avatar" value=formValues.avatar}}
   {{input placeholder="pointTotal" value=formValues.pointTotal}}
   <p>
-    {{#link-to "dashboard.parent.children"}}Cancel{{/link-to}}
+    {{#link-to "dashboard.parent.children.index"}}Cancel{{/link-to}}
     <button>SAVE</button>
   </p>
 
