--- a/app/dashboard/parent/children/new/template.hbs
+++ b/app/dashboard/parent/children/new/template.hbs
@@ -1,11 +1,11 @@
 <h1>Add Children</h1>
 
-{{#simple-form onsubmit=(action addChild model) as |formValues|}}
+{{#simple-form onsubmit=(action addChild) as |formValues|}}
   {{input placeholder="Username" value=formValues.username}}
   {{input placeholder="Password" value=formValues.password}}
-  <p>
-    {{#link-to "dashboard.parent.children.index"}}Cancel{{/link-to}}
-    <button>SAVE</button>
-  </p>
 
+  <p>
+    {{#link-to "dashboard.parent.children.index"}}CXL{{/link-to}}
+    <button>Submit</button>
+  </p>
 {{/simple-form}}
