--- a/app/dashboard/parent/template.hbs
+++ b/app/dashboard/parent/template.hbs
@@ -24,8 +24,9 @@
     {{#link-to "dashboard.parent.rewards"}}
       <button class="menu-button">Reward</button>
     {{/link-to}}
-
+    {{#link-to "logout"}}
     <button class="menu-button">Log Out</button>
+    {{/link-to}}
   </div>
 </div>
 <div class="content-container">
