--- a/app/dashboard/child/template.hbs
+++ b/app/dashboard/child/template.hbs
@@ -1,18 +1,19 @@
 <div class="dashboard-container">
   <div class="dashboard-container_items">
-    <h2 class="dashboard-text dashboard-item">Dashboard</h2>
+    <h2 class="dashboard-text dashboard-item">Child Dashboard</h2>
   </div>
+  {{#link-to "logout"}}
+  <button>logout</button>
+  {{/link-to}}
 </div>
 
 <div class="content-container">
   <div class="sidebar">
     <div class="sidebar-content">
-      {{#each model as |child|}}
-        <h2>{{child.avatar}}</h2>
-        <h2>{{child.username}}</h2>
-          <img src="https://s-media-cache-ak0.pinimg.com/236x/03/59/5a/03595aaef122cf3f28cad0f307060493.jpg" alt="">
-        <h2>{{child.pointTotal}}</h2>
-      {{/each}}
+        <h2>{{model.username}}</h2>
+
+        <h2>{{model.pointTotal}}</h2>
+
 {{outlet}}
     {{!-- <ul>
       {{#each model as |chore|}}
