--- a/app/dashboard/parent/children/new/template.hbs
+++ b/app/dashboard/parent/children/new/template.hbs
@@ -6,7 +6,7 @@
   {{input placeholder="Password" value=formValues.password}}
 
   <p>
-    {{#link-to "dashboard.parent.children.index"}}CXL{{/link-to}}
+    {{#link-to "dashboard.parent.children.index"}}Child List{{/link-to}}
     <button>Submit</button>
   </p>
 {{/simple-form}}
