--- a/app/dashboard/child/assignment/template.hbs
+++ b/app/dashboard/child/assignment/template.hbs
@@ -19,7 +19,7 @@
 </li>
   {{!-- {{/each}} --}}
 {{!-- </ul> --}}
-<h1> {{assignment.date}}</h1>
+{{!-- <h1> {{assignment.date}}</h1>
 <h1> {{assignment.done}}</h1>
 <h1> {{assignment.approve}}</h1>
 
@@ -28,4 +28,4 @@
 
 {{/each}}
 </ul>
-</form> --}}
+</form> --}} --}}
