child can see list of chores

--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -9,7 +9,7 @@
 <div class="footer">
   <div class="footer-animation">
     <img class="logo" src="https://cdn.evbuc.com/images/11170117/33265003369/1/logo.png" alt="">
-    <p class="title">Earn Rewards for Chores!!</p>
+    {{!-- <p class="title">Earn Rewards for Chores!!</p> --}}
   </div>
   {{outlet}}
     <div class="footer-information">
