--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -8,11 +8,12 @@
 
 <div class="footer">
   <div class="footer-animation">
-    <img class="logo" src="https://cdn.evbuc.com/images/11170117/33265003369/1/logo.png" alt="">
-    {{!-- <p class="title">Earn Rewards for Chores!!</p> --}}
+    <img class="logo" src="https://cdn.evbuc.com/images/11170117/33265003369/1/logo.png" alt="">{{!-- <p class="title">Earn Rewards for Chores!!</p> --}}
   </div>
   {{outlet}}
-    <div class="footer-information">
-      <h2>Footer Info</h2>
-    </div>
+  <div class="footer-information">
+    <h2>Footer Info</h2>
   </div>
+</div>
+
+{{md-modal-container}}
