--- a/app/dashboard/parent/children/new/template.hbs
+++ b/app/dashboard/parent/children/new/template.hbs
@@ -7,6 +7,8 @@
 
   <p>
     {{#link-to "dashboard.parent.children.index"}}Child List{{/link-to}}
-    <button>Submit</button>
+    <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+    <i class="material-icons right">send</i>
+    </button>
   </p>
 {{/simple-form}}
