--- a/app/dashboard/parent/chores/new/template.hbs
+++ b/app/dashboard/parent/chores/new/template.hbs
@@ -8,7 +8,9 @@
   {{input placeholder="date" value=formValues.date}}
   <p>
     {{#link-to "dashboard.parent.chores.index"}}Cancel{{/link-to}}
-    <button>SAVE</button>
+    <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+    <i class="material-icons right">send</i>
+    </button>
   </p>
 
 {{/simple-form}}
