--- a/app/dashboard/parent/rewards/new/template.hbs
+++ b/app/dashboard/parent/rewards/new/template.hbs
@@ -8,7 +8,9 @@
     <p>
   {{#link-to "dashboard.parent.rewards.index"}}Cancel{{/link-to}}
 
-  <button>Save</button>
+  <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+  <i class="material-icons right">send</i>
+  </button>
 </p>
 {{/simple-form}}
 
