--- a/app/dashboard/parent/template.hbs
+++ b/app/dashboard/parent/template.hbs
@@ -10,22 +10,22 @@
   <div class="button-box">
 
     {{#link-to "dashboard.parent"}}
-      <button class="menu-button">Home</button>
+      <button class="waves-effect waves-light btn">Home</button>
     {{/link-to}}
 
     {{#link-to "dashboard.parent.children.new"}}
-      <button class="menu-button">Children</button>
+      <button class="waves-effect waves-light btn">Children</button>
     {{/link-to}}
 
     {{#link-to "dashboard.parent.chores"}}
-      <button class="menu-button">Chores</button>
+      <button class="waves-effect waves-light btn">Chores</button>
     {{/link-to}}
 
     {{#link-to "dashboard.parent.rewards"}}
-      <button class="menu-button">Reward</button>
+      <button class="waves-effect waves-light btn">Reward</button>
     {{/link-to}}
     {{#link-to "logout"}}
-    <button class="menu-button">Log Out</button>
+    <button class="waves-effect waves-light btn">Log Out</button>
     {{/link-to}}
   </div>
 </div>
