--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -2,12 +2,12 @@
 <div class="main-box">
   <div class="parent-box">
     {{#link-to "login"}}
-    <button>Parent login</button>
+    <button class="waves-effect waves-light btn">Parent login</button>
     {{/link-to}}
   </div>
   <div class="child-box">
     {{#link-to "login-child"}}
-    <button>Child login</button>
+    <button class="waves-effect waves-light btn">Child login</button>
     {{/link-to}}
   </div>
 </div>
