--- a/app/login-child/template.hbs
+++ b/app/login-child/template.hbs
@@ -1,3 +1,4 @@
+<div class="big-container">
 <div class="child-login-form">
   {{#simple-form class="form-field" onsubmit=(action loginChild) as |formValues|}}
     <h2>Child Login</h2>
@@ -12,7 +13,12 @@
     </p>
 
 
-    <button class="menu-button">Log In</button>
+    <button class="waves-effect waves-light btn">Log In</button>
 
   {{/simple-form}}
+</div>
+
+<div class="child-pic">
+  <img src="https://themesseduphome.files.wordpress.com/2015/07/kids-chore1.jpg" alt="">
+</div>
 </div>
