--- a/app/login/template.hbs
+++ b/app/login/template.hbs
@@ -15,11 +15,15 @@
 
 
 
-      <button class="menu-button">Log In</button>
+      <button class="waves-effect waves-light btn">Log In</button>
 
 
 
       {{#link-to "sign-up"}}SignUp{{/link-to}}
     {{/simple-form}}
   </div>
+</div>
+
+<div class="parent-pic">
+  <img src="" alt="">
 </div>
