--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,3 +1,9 @@
+$roboto-font-path: '../assets/';
+
+// Materialize styles
+@import 'materialize';
+
+// ember-cli-materialize styles
 @import 'ember-cli-materialize';
 @import 'dashboard';
 @import 'login';
