--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -5,6 +5,7 @@ $roboto-font-path: '../assets/';
 
 // ember-cli-materialize styles
 @import 'ember-cli-materialize';
+@import 'base';
 @import 'dashboard';
 @import 'login';
 @import 'footer';
