--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -9,6 +9,7 @@ $roboto-font-path: '../assets/';
 @import 'login';
 @import 'footer';
 @import 'main';
+@import 'sign-up';
 
 // Uncomment this for working with yoga prototyping
 // http://rtablada.github.io/yoga-sass/#mixin-yoga-prototype
