--- a/app/dashboard/child/template.hbs
+++ b/app/dashboard/child/template.hbs
@@ -3,7 +3,7 @@
     <h2 class="dashboard-text dashboard-item">Child Dashboard</h2>
   </div>
   {{#link-to "logout"}}
-  <button>logout</button>
+  <button class="waves-effect waves-light btn">logout</button>
   {{/link-to}}
 </div>
 
@@ -21,17 +21,26 @@
 <ul>
   {{#each model.assignments as |a|}}
     <li>
-      {{a.chore.name}}
+      {{a.id}} - {{a.chore.name}}
+      <li class="assignment-item" >{{assignment.name}}</li>
+      <td>
+      <button class="waves-effect waves-light btn " {{action isComplete a preventDefault=false}}>Complete</button>
+    </td>
+    <td>
+      <button class="button" {{action delete a}}>
+        <span class="fa fa-trash"></span>
+      </button>
+    </td>
     </li>
   {{/each}}
 </ul>
 
 
 {{#link-to "dashboard.child.assignment"}}
-<button>Chores</button>
+<button class="waves-effect waves-light btn">Chores</button>
 {{/link-to}}
 {{#link-to "dashboard.child.store"}}
-<button>Rewards</button>
+<button class="waves-effect waves-light btn">Rewards</button>
 {{/link-to}}
     {{!-- <ul>
       {{#each model as |chore|}}
