--- a/app/login-child/template.hbs
+++ b/app/login-child/template.hbs
@@ -19,6 +19,6 @@
 </div>
 
 <div class="child-pic">
-  <img src="https://themesseduphome.files.wordpress.com/2015/07/kids-chore1.jpg" alt="">
+  <img src="kclogo1.png" alt="">
 </div>
 </div>
