--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -8,7 +8,9 @@
 
 <div class="footer">
   <div class="footer-animation">
-    <img class="logo" src="https://cdn.evbuc.com/images/11170117/33265003369/1/logo.png" alt="">{{!-- <p class="title">Earn Rewards for Chores!!</p> --}}
+    <span>
+    <img class="logo" src="kclogo1.png" alt="">{{!-- <p class="title">Earn Rewards for Chores!!</p> --}}
+    </span>
   </div>
   {{outlet}}
   <div class="footer-information">
