--- a/app/dashboard/child/template.hbs
+++ b/app/dashboard/child/template.hbs
@@ -16,7 +16,13 @@
 
 {{outlet}}
 
-{{model.username}}
+<ul>
+  {{#each model.assignments as |a|}}
+    <li>
+      {{a.chore.name}}
+    </li>
+  {{/each}}
+</ul>
 
 <ul>
   {{#each model.assignments as |a|}}
@@ -25,6 +31,7 @@
     </li>
   {{/each}}
 </ul>
+
 
 
 {{#link-to "dashboard.child.assignment"}}
