--- a/app/dashboard/parent/children/detail/template.hbs
+++ b/app/dashboard/parent/children/detail/template.hbs
@@ -9,3 +9,6 @@
     </li>
   {{/each}}
 </ul>
+{{#link-to "dashboard.parent"}}
+<button class="waves-effect waves-light btn">Return</button>
+{{/link-to}}
