--- a/app/sign-up/template.hbs
+++ b/app/sign-up/template.hbs
@@ -21,6 +21,9 @@
     <i class="material-icons right">send</i>
     </button>
   </p>
+  {{#link-to "login"}}
+  <button class="waves-effect waves-light btn">Cancel</button>
+  {{/link-to}}
 
 {{/simple-form}}
 </div>
