--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -25,6 +25,15 @@ $roboto-font-path: '../assets/';
   display: flex;
 }
 
+.text-box {
+  text-align: center;
+
+}
+
+.main-box {
+
+}
+
 .button-box {
   display: flex;
   justify-content: space-between;
