--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -13,8 +13,12 @@
     </span>
   </div>
   {{outlet}}
-  <div class="footer-information">
-    <h2>Footer Info</h2>
+  <div class="about-container">
+    <h2>About</h2>
+    <p>A question parents know all too well. How do you persuade your child to do chores around the house? There are no easy answers, but we believe we have a solution with Kids Chores. What is Kids Chores? It should be a one stop shop to chore persuasion.
+      With it, you can assign chores to your children. Each chore has an assigned prize. Upon completion, and the parent verification, the child will earn a reward. We have included the ability to customize chores for each child. Your kids will jump at
+      the opportunity to complete tasks and earn real, tangible prizes.
+    </p>
   </div>
 </div>
 
