--- a/app/dashboard/parent/template.hbs
+++ b/app/dashboard/parent/template.hbs
@@ -1,10 +1,4 @@
-<div class="about-container">
-  <h2>About</h2>
-  <p>A question parents know all too well. How do you persuade your child to do chores around the house? There are no easy answers, but we believe we have a solution with Kids Chores. What is Kids Chores? It should be a one stop shop to chore persuasion.
-    With it, you can assign chores to your children. Each chore has an assigned prize. Upon completion, and the parent verification, the child will earn a reward. We have included the ability to customize chores for each child. Your kids will jump at
-    the opportunity to complete tasks and earn real, tangible prizes.
-  </p>
-</div>
+
 <div class="parent-header">
   <h2>Parent Header</h2>
   <div class="button-box">
@@ -33,6 +27,8 @@
   <div class="sidebar">
     <div class="sidebar-content">
       <h2>Parent Dashboard</h2>
+      {{#link-to "dashboard.parent.children.index"}}<button class="waves-effect waves-light btn">Child List</button>{{/link-to}}
+
     </div>
 
   </div>
