--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -1,5 +1,6 @@
-<h2>This is the index route</h2>
-<div class="main-box">
+
+  <div class="text-box"><h2>Welcome to Kids Chores!!</h2></div>
+  <div class="main-box">
   <div class="parent-box">
     {{#link-to "login"}}
     <button class="waves-effect waves-light btn">Parent login</button>
