--- a/app/dashboard/child/assignment/template.hbs
+++ b/app/dashboard/child/assignment/template.hbs
@@ -1,7 +1,11 @@
+List of Chores for each Kid
 
-{{#each model as |assignment|}}
-<h1> {{assignment.date}}</h1>
-<h1> {{assignment.done}}</h1>
-<h1> {{assignment.approve}}</h1>
+{{model.username}}
 
-{{/each}}
+<ul>
+  {{#each model.assignments as |a|}}
+    <li>
+      {{a.chore.name}}
+    </li>
+  {{/each}}
+</ul>
