--- a/app/dashboard/child/store/template.hbs
+++ b/app/dashboard/child/store/template.hbs
@@ -1,5 +1,6 @@
 Rewards Page - Pick your item below
-
+{{model.child.name}}
+{{model.chore.name}}
 <ul>
   {{#each model.assignments as |a|}}
     <li>
