--- a/app/dashboard/child/template.hbs
+++ b/app/dashboard/child/template.hbs
@@ -2,11 +2,12 @@
   <div class="dashboard-container_items">
     <h2 class="dashboard-text dashboard-item">Child Dashboard</h2>
   </div>
-    {{#link-to "dashboard.child.assignment"}}
-      <button class="waves-effect waves-light btn">Chores</button>
-    {{/link-to}}
+
     {{#link-to "dashboard.child.store"}}
       <button class="waves-effect waves-light btn">Rewards</button>
+    {{/link-to}}
+    {{#link-to "dashboard.child.assignment"}}
+      <button class="waves-effect waves-light btn">Chores List</button>
     {{/link-to}}
     {{#link-to "logout"}}
       <button class="waves-effect waves-light btn">logout</button>
