--- a/app/dashboard/parent/template.hbs
+++ b/app/dashboard/parent/template.hbs
@@ -1,6 +1,6 @@
 
 <div class="parent-header">
-  <h2>Parent Header</h2>
+  {{!-- <h2>Parent Header</h2> --}}
   <div class="button-box">
 
     {{#link-to "dashboard.parent"}}
