--- a/app/dashboard/parent/template.hbs
+++ b/app/dashboard/parent/template.hbs
@@ -8,7 +8,7 @@
     {{/link-to}}
 
     {{#link-to "dashboard.parent.children.new"}}
-      <button class="waves-effect waves-light btn">Children</button>
+      <button class="waves-effect waves-light btn">Add Children</button>
     {{/link-to}}
 
     {{#link-to "dashboard.parent.chores"}}
