--- a/app/styles/dashboard.scss
+++ b/app/styles/dashboard.scss
@@ -17,7 +17,8 @@
 }
 
 .content-container {
-  // max-width: 65rem;
+  max-width: 75rem;
+  overflow: auto;
   display: flex;
   margin: auto;
   // background-image: url(http://www.absoluteanime.com/kirby/cleaning_kirby.jpg);
@@ -35,7 +36,7 @@
 
 .main-content {
   padding-bottom: 1rem;
-  padding-left: 8rem;
+  padding-left: 5rem;
 
 }
 
