--- a/app/styles/dashboard.scss
+++ b/app/styles/dashboard.scss
@@ -23,6 +23,7 @@
   margin: auto;
   // background-image: url(http://www.absoluteanime.com/kirby/cleaning_kirby.jpg);
   background: #e2f1f6;
+  box-shadow: 10px 5px 5px black;
 
 }
 
