across the board

--- a/app/login-child/template.hbs
+++ b/app/login-child/template.hbs
@@ -1,4 +1,6 @@
-<div class="big-container">
+{{!-- <div class="big-container"> --}}
+<div class="row">
+  <div class="col s12 m4 l4">
 <div class="child-login-form">
   {{#simple-form class="form-field" onsubmit=(action loginChild) as |formValues|}}
     <h2>Child Login</h2>
@@ -17,8 +19,11 @@
 
   {{/simple-form}}
 </div>
+</div>
 
+<div class="col s12 m8 l8">
 <div class="child-pic">
   <img src="kclogo1.png" alt="">
+</div>
 </div>
 </div>
