--- a/app/login/template.hbs
+++ b/app/login/template.hbs
@@ -1,5 +1,6 @@
-<div class="big-container">
-
+{{!-- <div class="big-container"> --}}
+  <div class="row">
+    <div class="col s12 m4 l4">
   <div class="parent-login-form">
     {{#simple-form class="form-field" onsubmit=(action loginParent) as |formValues|}}
       <h2>Parent Login</h2>
@@ -24,8 +25,12 @@
       {{#link-to "sign-up"}}SignUp{{/link-to}}
     {{/simple-form}}
   </div>
+</div>
 
+<div class="col s12 m8 l8">
 <div class="parent-pic">
   <img src="kclogo1.png" alt="">
 </div>
 </div>
+</div>
+{{!-- </div> --}}
