--- a/app/dashboard/parent/template.hbs
+++ b/app/dashboard/parent/template.hbs
@@ -23,7 +23,9 @@
     {{/link-to}}
   </div>
 </div>
-<div class="content-container">
+<div class="row">
+<div class="col s12 m4 l3">
+{{!-- <div class="content-container"> --}}
   <div class="sidebar">
     <div class="sidebar-content">
       <h2>Parent Dashboard</h2>
@@ -32,6 +34,8 @@
     </div>
 
   </div>
+</div>
+<div class="col s12 m8 l9">
   <div class="main-content">
     <div class="main-items">
       {{outlet}}
@@ -40,3 +44,5 @@
     </div>
   </div>
 </div>
+</div>
+{{!-- </div> --}}
