--- a/app/dashboard/child/template.hbs
+++ b/app/dashboard/child/template.hbs
@@ -21,7 +21,10 @@
       <h2>{{model.pointTotal}}</h2>
     </div>
   </div>
+    <div class="">
+      {{outlet}}
 
-    {{outlet}}
+    </div>
+
 
 </div>
