--- a/app/dashboard/child/store/template.hbs
+++ b/app/dashboard/child/store/template.hbs
@@ -1,15 +1,24 @@
 Rewards Page - Pick your item below
-{{model.child.name}}
-{{model.chore.name}}
-<ul>
-  {{#each model.assignments as |a|}}
-    <li>
-      {{a.id}} - {{a.chore.name}} - {{a.done}} - {{a.date}} - {{a.approved}}
-      {{!-- <li class="assignment-item" >{{assignments.name}}</li> --}}
-      <td>
-      <button class="waves-effect waves-light btn " {{action isComplete a preventDefault=false}}>Complete</button>
-    </td>
+<h1>Rewards</h1>
 
-    </li>
+<table>
+  <thead>
+    <tr>
+    <th>Reward</th>
+    <th>Points</th>
+    <th>Quantity</th>
+    <th>Select</th>
+  </tr>
+</thead>
+<tbody>
+  {{#each model.rewards as |reward|}}
+    <tr>
+      <td>{{reward.name}}</td>
+      <td>{{reward.points}}</td>
+      <td></td>
+      <td></td>
+    </tr>
+
   {{/each}}
-</ul>
+</tbody>
+</table>
