--- a/app/login-child/template.hbs
+++ b/app/login-child/template.hbs
@@ -17,6 +17,10 @@
 
     <button class="waves-effect waves-light btn">Log In</button>
 
+    {{#link-to "index"}}
+    <button class="waves-effect waves-light btn">Cancel</button>
+    {{/link-to}}
+
   {{/simple-form}}
 </div>
 </div>
