--- a/app/styles/login.scss
+++ b/app/styles/login.scss
@@ -11,7 +11,7 @@
   // width: 50%;
   padding-bottom: 2rem;
   padding-left: 3rem;
-  background: red;
+  background: #9D003C;
   // text-align: center;
   box-shadow: 10px 5px 5px black;
 }
@@ -22,7 +22,7 @@
   // width: 50%;
   padding-bottom: 2rem;
   padding-left: 3rem;
-  background: red;
+  background: #9D003C;
   box-shadow: 10px 5px 5px black;
 }
 
