--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -1,4 +1,4 @@
-
+  <div class="boss-box">
   <div class="text-box"><h2>Welcome to Kids Chores!!</h2></div>
   <div class="main-box">
   <div class="parent-box">
@@ -11,4 +11,5 @@
     <button class="waves-effect waves-light btn">Child login</button>
     {{/link-to}}
   </div>
+</div>
 </div>
