--- a/app/dashboard/child/assignment/template.hbs
+++ b/app/dashboard/child/assignment/template.hbs
@@ -1,4 +1,4 @@
-Hello {{model.username}}, this is what you have to do
+<h5>Hello {{model.username}}, this is what you have to do</h5>
 
 <ul>
   {{#each model.assignments as |a|}}
