--- a/app/dashboard/parent/chores/edit/template.hbs
+++ b/app/dashboard/parent/chores/edit/template.hbs
@@ -8,7 +8,7 @@
   {{input placeholder="Date" value=formValues.date}}
   <p>
     {{#link-to "dashboard.parent.chores.index"}}Cancel{{/link-to}}
-    <button>SAVE</button>
+    <button class="waves-effect waves-light btn">Save</button>
   </p>
 
 {{/simple-form}}
