--- a/app/dashboard/parent/rewards/edit/template.hbs
+++ b/app/dashboard/parent/rewards/edit/template.hbs
@@ -6,7 +6,7 @@
     <p>
   {{#link-to "dashboard.parent.rewards.index"}}Cancel{{/link-to}}
 
-  <button>Save</button>
+  <button class="waves-effect waves-light btn">Save</button>
 </p>
 {{/simple-form}}
 
