--- a/app/dashboard/child/store/template.hbs
+++ b/app/dashboard/child/store/template.hbs
@@ -6,6 +6,7 @@
     <tr>
     <th>Reward</th>
     <th>Points</th>
+    <th>Description</th>
     {{!-- <th>Quantity</th> --}}
     <th>Select</th>
   </tr>
@@ -15,6 +16,7 @@
     <tr>
       <td>{{reward.name}}</td>
       <td>{{reward.points}}</td>
+      <td>{{reward.description}}</td>
       {{!-- <td>{{input}}</td> --}}
       <td><button {{action buyReward reward}}>Buy</button></td>
     </tr>
