--- a/app/dashboard/child/assignment/template.hbs
+++ b/app/dashboard/child/assignment/template.hbs
@@ -5,14 +5,12 @@
     <li>
       {{a.chore.name}}
       <li class="assignment-item">{{assignment.name}}</li>
+      {{a.chore.description}}
+      <li class="assignment-item">{{assignment.description}}</li>
       <td>
         <button class="waves-effect waves-light btn" {{action isComplete a preventDefault=false}}>Complete</button>
       </td>
-      <td>
-        <button class="button" {{action delete a}}>
-          <span class="fa fa-trash"></span>
-        </button>
-      </td>
+
     </li>
   {{/each}}
 </ul>
