--- a/app/styles/dashboard.scss
+++ b/app/styles/dashboard.scss
@@ -45,7 +45,7 @@ box-shadow: 10px 5px 5px black;
 
 .main-content {
   padding-bottom: 1rem;
-  padding-left: 5rem;
+  // padding-left: 5rem;
   background: #e2f1f6;
   overflow: auto;
 }
