--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,11 +1,24 @@
+.logo {
+  margin: $gutter auto;
+  background: $brand-yellow;
+  border: 1px $brand-black solid;
+  border-radius: 20%;
+  box-shadow: 2px 2px 10px $brand-black;
+}
+
 .main-box {
   display: flex;
+  justify-content: center;
 }
 
 .parent-box {
-
+  margin: $gutter;
 }
 
 .child-box {
+  margin: $gutter;
+}
 
+.btn {
+  padding-bottom: $gutter;
 }
